open_mx/log/build_2024-11-14_17-56-27/robot_omx/stderr.log
  File "/home/lucasb/OpenManipulatorXRoboticArmKinematics/open_mx/install/robot_omx/lib/python3.10/site-packages/robot_omx/kinematic_library.py", line 37
    	print(f'{TEST: The rotation is {rotation}')
    	                                          ^
SyntaxError: f-string: expecting '}'

